[package]
name = "rtmp"
version = "0.1.0"
authors = ["Sarah Allen <sarah@ultrasaurus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
byteorder = "1.2.1"   # TODO: removing? we may have all we need built-in now
rand = "0.3"
failure = "0.1.1"
hmac = "0.6.2"
sha2 = "0.7.1"