[package]
name = "rtmp"
version = "0.1.0"
authors = ["Sarah Allen <sarah@ultrasaurus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.3"

byteorder = "1.2.1"   # TODO: removing? we may have all we need built-in now
rand = "0.3"
failure = "0.1.1"
hmac = "0.6.2"
sha2 = "0.7.1"
rml_amf0 = "0.1"
serde = "1.0.104"
syn = "1.0.14"
enum-primitive-derive = "0.1.2"
num-traits = "0.2.11"